# QML-Discord-Button

./: CMakeLists.txt  README.md  UIKitchen_en_US.ts  main.qml  qml.qrc
buttons/: CircularIconButton.qml
src/: uicontrols.h
